--- a/tests/fixtures/worker-model-template/tmpl-docker.yml
+++ b/tests/fixtures/worker-model-template/tmpl-docker.yml
@@ -1,5 +1,6 @@
 name: docker-unix
-docker:
+type: docker
+spec:
   cmd: curl {{.API}}/download/worker/linux/$(uname -m) -o worker && chmod +x worker && exec ./worker
   shell: sh -c
   envs:
