fix(api,worker): handle multiple release maturity (#6280)

--- a/tests/fixtures/ITSCWRKFLWRT1/push-artifact.pip.yml
+++ b/tests/fixtures/ITSCWRKFLWRT1/push-artifact.pip.yml
@@ -10,29 +10,30 @@ jobs:
   stage: Stage 1
   steps:
   - script:
-    - env > env.txt
+    - echo "hello world" > test.txt
+    - echo "changes" > test.changes
   - artifactUpload:
-      path: env.txt
+      path: test.*
       tag: '{{.cds.version}}'
 - job: Release-to-staging
   stage: Stage 2
   steps:
   - pushBuildInfo: '{{.cds.workflow}}'
   - promote:
-      artifacts: .*
+      artifacts: .*.txt
       srcMaturity: snapshot
       destMaturity: staging
 - job: Release-to-rc
   stage: Stage 3
   steps:
   - release:
-      artifacts: .*
+      artifacts: .*.txt
       srcMaturity: staging
       destMaturity: rc
 - job: Release-to-release
   stage: Stage 4
   steps:
   - release:
-      artifacts: .*
+      artifacts: .*.txt
       srcMaturity: rc
       destMaturity: release
