fix(cli,contrib,doc): typos
Signed-off-by: francois  samin <francois.samin@corp.ovh.com>

--- a/contrib/workflow-templates/demo-usage-service-postgresql/demo-usage-service-postgresql.yml
+++ b/contrib/workflow-templates/demo-usage-service-postgresql/demo-usage-service-postgresql.yml
@@ -4,7 +4,7 @@ group: shared.infra
 description: |
   The Service Link prerequisite allow you to use any Docker image as a dependency of a job.
 
-  This is pretty useful if you want to make some tests with a real database, or put your builded application as a job prerequisite for doing some tests.
+  This is pretty useful if you want to make some tests with a real database, or put your built application as a job prerequisite for doing some tests.
 
   Doc: https://ovh.github.io/cds/docs/tutorials/service-requirement-pg/
 workflow: workflow.yml
