--- a/tests/fixtures/worker-model/docker-debian9.yml
+++ b/tests/fixtures/worker-model/docker-debian9.yml
@@ -2,8 +2,7 @@ name: docker-debian
 description: my debian worker model
 type: docker
 spec:
-  image: myimage:1.1
-  registry: http://my-registry:9000
+  image: buildpack-deps:buster
   cmd: curl {{.API}}/download/worker/linux/$(uname -m) -o worker && chmod +x worker && exec ./worker
   shell: sh -c
   envs:
