fix: push on master

--- a/tests/08_v2_analyze.yml
+++ b/tests/08_v2_analyze.yml
@@ -45,7 +45,7 @@ testcases:
     - script: cat ./fixtures/worker-model-template/tmpl-docker.yml > /tmp/myrepo/.cds/worker-model-templates/tmpl-docker.yml
     - script: cat ./fixtures/worker-model/docker-debian9.yml > /tmp/myrepo/.cds/worker-models/docker-debian9.yml
     - script: cd /tmp/myrepo && git config user.email "{{.git.user}}@gitea.eu" && git config user.name "{{.git.user}}"
-    - script: cd /tmp/myrepo && git add /tmp/myrepo/.cds/* && git commit . --gpg-sign=2B74B3591CEFB2F534265465E027B500E97E52E7 -m "add file and sign" && git push
+    - script: cd /tmp/myrepo && git checkout -b master && git add /tmp/myrepo/.cds/* && git commit . --gpg-sign=2B74B3591CEFB2F534265465E027B500E97E52E7 -m "add file and sign" && git push origin master
     - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental project repository hook-regen ITCLIPRJVCS my_vcs_server {{.git.user}}/myrepo --format json
       vars:
         hookSecret:
