--- a/tests/fixtures/ITCLIPRJVCS/my_vcs_project.yml
+++ b/tests/fixtures/ITCLIPRJVCS/my_vcs_project.yml
@@ -5,5 +5,6 @@ description: "it's the test vcs server on project"
 url: "${GITEA_HOST}"
 auth:
   username: gituser
-  password: gitpwd
+  token: gitpwd
+  sshKeyName: proj-ssh-itcliprjvcs
 
