feat(api): template bulk update parallel
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/tests/fixtures/template/simple-safe/example-simple.yml
+++ b/tests/fixtures/template/simple-safe/example-simple.yml
@@ -1,5 +1,5 @@
-slug: example-simple
-name: 'Example simple 🤖️'
+slug: example-simple-safe
+name: 'Example simple safe 🤖️'
 group: shared.infra
 description: A example template for test purpose, made with ❤️ by
   CDS team.
