--- a/ui/package.json
+++ b/ui/package.json
@@ -69,6 +69,7 @@
     "lodash-es": "4.17.21",
     "modernizr": "3.12.0",
     "moment": "2.29.4",
+    "monaco-editor": "0.33.0",
     "ng-event-source": "1.0.14",
     "ng-zorro-antd": "13.4.0",
     "ng2-codemirror-typescript": "3.13.1",
