--- a/tests/fixtures/rbac/rbac_admin.yml
+++ b/tests/fixtures/rbac/rbac_admin.yml
@@ -3,6 +3,9 @@ projects:
   - role: manage
     projects: [ITCLIPRJVCS]
     users: [cds.integration.tests.rw]
+  - role: manage-worker-model
+    projects: [ITCLIPRJVCS]
+    users: [cds.integration.tests.rw]
 globals:
   - role: manage-permission
     users: [cds.integration.tests.rw]
