feat(api, cli): enable/disable project key

--- a/tests/03_clictl_project.yml
+++ b/tests/03_clictl_project.yml
@@ -73,6 +73,22 @@ testcases:
   steps:
   - script: {{.cdsctl}} -f {{.cdsctl.config}} application variable delete ITCLIAPPPRJ TestApp var1
 
+- name: project keys list management
+  steps:
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project keys list ITCLIAPPPRJ
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project keys add ITCLIAPPPRJ mykeytest ssh
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project keys disable ITCLIAPPPRJ mykeytest
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project keys list ITCLIAPPPRJ | jq -c '.[] | select( .name | contains("mykeytest"))'
+    assertions:
+      - result.code ShouldEqual 0
+      - result.systemoutjson.disable ShouldEqual "true"
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project keys enable ITCLIAPPPRJ mykeytest
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project keys list ITCLIAPPPRJ | jq -c '.[] | select( .name | contains("mykeytest"))'
+    assertions:
+      - result.code ShouldEqual 0
+      - result.systemoutjson.disable ShouldEqual "false"
+  - script: {{.cdsctl}} -f {{.cdsctl.config}} project keys delete ITCLIAPPPRJ mykeytest
+
 - name: clean
   steps:
   - script: {{.cdsctl}} -f {{.cdsctl.config}} project delete --force ITCLIAPPPRJ
